--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,12 @@
   "react-scripts": "5.0.1",
   
     
+  "semantic-ui-css": "^2.5.0",
+  
+    
+  "semantic-ui-react": "^2.1.3",
+  
+    
   "web-vitals": "^2.1.4"
   
   },
